Version 0.3
===========

01.06.2010
==========
  Dalibor Nasevic <dalibor.nasevic@gmail.com>
  * Always redirect to twitter site on https protocol for safe entering of credentials

31.05.2010
==========
  Peco Danajlovski <vortexmk@gmail.com>
  * Switched to Rails 2.3.8
  * Added 'about service' page

  Dalibor Nasevic <dalibor.nasevic@gmail.com>
  * When user for the first time comes to settings page, do not display deactivate link, but link to tweet area
  * Changed style of deactivate link to be same as back to tweet area link
  * Cut text of select categories description to fit the whole line

30.05.2010
==========
  Peco Danajlovski <vortexmk@gmail.com>
  * Updated the favicon
  * Adjusted sidebar header font in the category view

29.05.2010
==========
  Peco Danajlovski <vortexmk@gmail.com>
  * Changed consumer token to use the new application (140_mk_bot)
  * Bugfixes:
    - Tweet overlay is now closing properly

  Dalibor Nasevic <dalibor.nasevic@gmail.com>
  * Implemented endless page for tweets/users on category show page

26.05.2010
==========
  Peco Danajlovski <vortexmk@gmail.com>
  * Bugfixes:
    - Fixed the issue with RT and Reply not responding properly

24.05.2010
==========
  Peco Danajlovski <vortexmk@gmail.com>
  * Changed the color of the logo
  * Changed the font in the headings
  * Adjusted the position of Reply and RT buttons
  * Bugfixes:
    - The pagination works as it should now

22.05.2010
==========
  Peco Danajlovski <vortexmk@gmail.com>
  * Bugfixes:
    - Fixed the 'create list from category' option
	  - Changed 'denovi' to 'dena'
	  - Fixed the look of the 'sign in button'
	  - Fixed the down arrow when user is not logged in
	  - Bigger text in settings page
	  - Fixed the sticky footer
	* Switched category permalinks to latin
	* User info presents categories
	* Ordered categories by number of users

04.05.2010
==========
  Peco Danajlovski <vortexmk@gmail.com>
  * Moved click area for extra info to bottom


03.05.2010
==========