@@ -3,6 +3,9 @@ Version 0.3
 
 01.06.2010
 ==========
+  Peco Danajlovski <vortexmk@gmail.com>
+  * Changed trending topic to #140mk
+
   Dalibor Nasevic <dalibor.nasevic@gmail.com>
   * Always redirect to twitter site on https protocol for safe entering of credentials
 
